--- a/View/HelloWorldView.xaml
+++ b/View/HelloWorldView.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="MyMVVMProject.MainWindow"
+﻿<Window x:Class="MyMVVMProject.View.HelloWorldView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MyMVVMProject"
+        xmlns:local="clr-namespace:MyMVVMProject.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="HelloWorldView" Height="450" Width="800">
     <Grid>
-
+        
     </Grid>
 </Window>
